Added Images Folder
Added the icons for contact and photo for the page

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 
 <div class="images">
-   <img src="c:\Users\petra\Pictures\github_PNG80.png" alt="github"  style="width:200px;height:200px;" >
-   <img src="c:\Users\petra\Pictures\official-linkedin-icon-png-12.jpg" alt="linkedIN"  style="width:200px;height:200px;">
-   <img src="c:\Users\petra\Pictures\327339.png" alt="mail"  style="width:200px;height:200px;">
-   <img src="c:\Users\petra\Pictures\phone_PNG48919.png" alt="phone"  style="width:200px;height:200px;">
+   <img src="Images/GithubIcon.png" alt="github"  style="width:200px;height:200px;" >
+   <img src="Images/LinkedIcon.webp" alt="linkedIN"  style="width:200px;height:200px;">
+   <img src="Images/EmailIcon.jpg" alt="mail"  style="width:200px;height:200px;">
+   <img src="Images/PhoneIcon.png" alt="phone"  style="width:200px;height:200px;">
 
 </div>
 
