heb de links verandert

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 <div class="container">
 
-    <div id="home"> <a href="file:///C:/Users/petra/OneDrive/html&css/html-css/Portofolio/portofolio.html">home pagina</a> </div>
-    <div id="over mij"> <a href="file:///C:/Users/petra/OneDrive/html&css/html-css/Portofolio/about.html" >over mij</a> </div>
-    <div id="vaardigheden"> <a href="file:///C:/Users/petra/OneDrive/html&css/html-css/Portofolio/vaardigheden.html">vaardigheden</a> </div>
-    <div id="contact"> <a href="file:///C:/Users/petra/OneDrive/html&css/html-css/Portofolio/contact.html">contact</a> </div>
+    <div id="home"> <a href="http://127.0.0.1:5500/index.html">home pagina</a> </div>
+    <div id="over mij"> <a href="http://127.0.0.1:5500/about.html" >over mij</a> </div>
+    <div id="vaardigheden"> <a href="http://127.0.0.1:5500/vaardigheden.html">vaardigheden</a> </div>
+    <div id="contact"> <a href="http://127.0.0.1:5500/contact.html">contact</a> </div>
 </div>
  
 <div class="container2">
