--- a/index.html
+++ b/index.html
@@ -7,28 +7,36 @@
     <title>portofolio website</title>
 </head>
 <body>
-<div class="container">
 
-    <div id="home"> <a href="http://127.0.0.1:5500/index.html">home pagina</a> </div>
-    <div id="over mij"> <a href="http://127.0.0.1:5500/about.html" >over mij</a> </div>
-    <div id="vaardigheden"> <a href="http://127.0.0.1:5500/vaardigheden.html">vaardigheden</a> </div>
-    <div id="contact"> <a href="http://127.0.0.1:5500/contact.html">contact</a> </div>
+    <div id="name"><h1>Petra</h1></div>
+
+<div class="container">
+    <div id="home"> <a href="index.html">home pagina</a> </div>
+    <div id="over mij"> <a href="about.html" >over mij</a> </div>
+    <div id="vaardigheden"> <a href="vaardigheden.html">vaardigheden</a> </div>
+    <div id="contact"> <a href="contact.html">contact</a> </div>
 </div>
  
 <div class="container2">
+
+ <div class="squishedText">
    <p>Hoi, ik ben Petra Nedeljkovic</p>
    <p>Ik specialiseer me in webdevelopment en creëer mooie, functionele webpagina’s.</p>
-
+ </div>
 
 <div class="images">
    <img src="Images/GithubIcon.png" alt="github"  style="width:200px;height:200px;" >
    <img src="Images/LinkedIcon.webp" alt="linkedIN"  style="width:200px;height:200px;">
-   <img src="Images/EmailIcon.jpg" alt="mail"  style="width:200px;height:200px;">
+   <img src="Images/EmailIcon.png" alt="mail"  style="width:200px;height:200px;">
    <img src="Images/PhoneIcon.png" alt="phone"  style="width:200px;height:200px;">
 
 </div>
 
-<div id="werk"> <a href="file:///C:/Users/petra/OneDrive/html&css/html-css/Portofolio/werk.html">zie mijn werk</a></div>
+<img src="Images/PetraI.jpg" alt="Petra" class="right-image">
+
+
+<a id="werk" href="werk.html">My Work</a>
+
 
 </div>
 </body>
