--- a/index.html
+++ b/index.html
@@ -4,40 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="portofolio.css">
-    <title>portofolio website</title>
+    <title>Portofolio Website</title>
 </head>
 <body>
 
-    <div id="name"><h1>Petra</h1></div>
+    <nav class="navbar">
+        <div class="logo">Petra</div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">Over mij</a></li>
+            <li><a href="vaardigheden.html">Vaardigheden</a></li>
+            <li><a href="werk.html">Mijn werk</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-<div class="container">
-    <div id="home"> <a href="index.html">home pagina</a> </div>
-    <div id="over mij"> <a href="about.html" >over mij</a> </div>
-    <div id="vaardigheden"> <a href="vaardigheden.html">vaardigheden</a> </div>
-    <div id="contact"> <a href="contact.html">contact</a> </div>
-</div>
- 
-<div class="container2">
+    <div class="container2">
+        <div class="squishedText">
+            <p>Hoi, ik ben Petra Nedeljkovic</p>
+            <p>Ik specialiseer me in webdevelopment en creëer mooie, functionele webpagina’s.</p>
+        </div>
 
- <div class="squishedText">
-   <p>Hoi, ik ben Petra Nedeljkovic</p>
-   <p>Ik specialiseer me in webdevelopment en creëer mooie, functionele webpagina’s.</p>
- </div>
+        <div class="images">
+            <img src="Images/GithubIcon.png" alt="GitHub" width="200" height="200">
+            <img src="Images/LinkedIcon.webp" alt="LinkedIn" width="200" height="200">
+            <img src="Images/EmailIcon.png" alt="Email" width="200" height="200">
+            <img src="Images/PhoneIcon.png" alt="Phone" width="200" height="200">
+        </div>
 
-<div class="images">
-   <img src="Images/GithubIcon.png" alt="github"  style="width:200px;height:200px;" >
-   <img src="Images/LinkedIcon.webp" alt="linkedIN"  style="width:200px;height:200px;">
-   <img src="Images/EmailIcon.png" alt="mail"  style="width:200px;height:200px;">
-   <img src="Images/PhoneIcon.png" alt="phone"  style="width:200px;height:200px;">
+        <a id="werk" href="werk.html">Zie mijn  Werk</a>
+    </div>
 
-</div>
+    <img src="Images/PetraI.jpg" alt="Petra" class="right-image">
 
-<img src="Images/PetraI.jpg" alt="Petra" class="right-image">
-
-
-<a id="werk" href="werk.html">My Work</a>
-
-
-</div>
 </body>
 </html>
