--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <title>Document</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="contact.css">
+  <title>Contact</title>
 </head>
 <body>
-   
-  
+
+  <nav class="navbar">
+    <div class="logo">Petra</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">Over mij</a></li>
+      <li><a href="vaardigheden.html">Vaardigheden</a></li>
+      <li><a href="werk.html">Mijn werk</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <div class="contact-container">
+    <div class="contact-card">
+      <img src="Images/EmailIcon.png" alt="Email">
+      <h2>Email</h2>
+      <p>petra.nedeljkovic@example.com</p>
+    </div>
+
+    <div class="contact-card">
+      <img src="Images/PhoneIcon.png" alt="Phone">
+      <h2>Phone</h2>
+      <p>+31 6 12345678</p>
+    </div>
+  </div>
+
 </body>
 </html>
