--- a/todolist/index.html
+++ b/todolist/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Welcome to the To-Do List App</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
